# av-scenechange

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  y4m.rs
src/cpu_features/: aarch64.rs  mod.rs  rust.rs  x86.rs
src/sad_plane/: mod.rs  x86.rs
src/scenechange/: fast.rs  mod.rs
