[package]
name = "av-scenechange"
version = "0.9.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Estimates frames in a video where a scenecut would be ideal"
license = "MIT"
repository = "https://github.com/rust-av/av-scenechange"

[dependencies]
anyhow = "1.0.56"
y4m = "0.8.0"
bpaf = { version = "0.8.1", optional = true, features = ["derive"] }
serde = { version = "1.0.123", optional = true, features = ["derive"] }
serde_json = { version = "1.0.62", optional = true }
debug_unreachable = "0.1.1"
v_frame = "0.3.3"
cfg-if = "1.0.0"
arg_enum_proc_macro = "0.3.2"
libc = "0.2.146"

[build-dependencies]
cc = { version = "1.0.79", optional = true }
nasm-rs = { version = "0.2.5", optional = true }

[features]
default = ["binary", "asm"]
asm = ["nasm-rs", "cc"]
binary = ["bpaf", "serialize"]
serialize = ["serde", "serde_json"]

[[bin]]
name = "av-scenechange"
path = "src/main.rs"
required-features = ["binary"]
